<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcome_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/welcome_to_raffleevent"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_header_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/efficiently_manage_your_events"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_header" />

    <ImageView
        android:id="@+id/welcome_image"
        android:layout_width="272dp"
        android:layout_height="256dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/welcome_image_of_application"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_header_second"
        app:srcCompat="@drawable/welcome_icon" />

    <EditText
        android:id="@+id/edit_username_field"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:inputType="text"
        android:text="@string/enter_your_username"
        android:textAlignment="center"
        android:textColor="@color/input_text_color"
        android:hint="Enter Your Username"
        app:layout_constraintBottom_toTopOf="@+id/join_app_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/join_app_button"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/purple_for_app"
        android:text="@string/join"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>