<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <!-- Include Top Navbar -->
    <include
        android:id="@+id/top_navbar"
        layout="@layout/top_navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Title: Create Facility -->
    <TextView
        android:id="@+id/createFacilityTitle"
        style="@style/TextHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_facility"
        android:textColor="@color/textColorPrimary"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        app:layout_constraintTop_toBottomOf="@id/top_navbar"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Facility Name Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/facilityNameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusTopStart="@dimen/button_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/button_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/button_corner_radius"
        app:boxCornerRadiusBottomEnd="@dimen/button_corner_radius"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        app:layout_constraintTop_toBottomOf="@id/createFacilityTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/facilityNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/facility_name_hint"
            android:textColor="@color/textColorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Location Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/locationInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusTopStart="@dimen/button_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/button_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/button_corner_radius"
        app:boxCornerRadiusBottomEnd="@dimen/button_corner_radius"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/location_icon"
        app:endIconTint="@color/buttonPrimary"
        app:layout_constraintTop_toBottomOf="@id/facilityNameInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/locationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_hint"
            android:textColor="@color/textColorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Facility Details Section -->
    <LinearLayout
        android:id="@+id/facilityDetailsLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        app:layout_constraintTop_toBottomOf="@id/locationInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/facilityDetailsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facility_details"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_large"
            android:layout_marginBottom="@dimen/small_margin" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/facilityDetailsInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusTopStart="@dimen/button_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/button_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/button_corner_radius"
            app:boxCornerRadiusBottomEnd="@dimen/button_corner_radius"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/facilityDetailsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/facility_details_hint"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:textColor="@color/textColorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!-- Save Button -->
    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:text="@string/save"
        android:textColor="@color/buttonTextColor"
        android:backgroundTint="@color/buttonPrimary"
        app:cornerRadius="@dimen/button_corner_radius"
        app:layout_constraintTop_toBottomOf="@id/facilityDetailsLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Include Bottom Navbar -->
    <include
        android:id="@+id/bottom_navbar"
        layout="@layout/bottom_navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>