<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="@dimen/medium_padding">

    <!-- Warning Icon -->
    <ImageView
        android:id="@+id/warningIcon"
        android:layout_width="@dimen/warning_icon_width"
        android:layout_height="@dimen/warning_icon_height"
        android:layout_marginTop="@dimen/warning_icon_top_margin"
        android:src="@drawable/warning_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@dimen/warning_icon_horiz_bias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorPrimaryVariant" />

    <LinearLayout
        android:id="@+id/centeredContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/warningIcon"
        app:layout_constraintVertical_bias="@dimen/geolocation_mssg_vert_bias">

        <!-- Geolocation Title -->
        <TextView
            android:id="@+id/geolocationWarningTitle"
            style="@style/TextHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/geolocation_warning_title" />

        <!-- Geolocation Message -->
        <TextView
            android:id="@+id/geolocationWarningMessage"
            style="@style/TextBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:text="@string/geolocation_warning_message" />

        <!-- Allow Access Button -->
        <Button
            android:id="@+id/allowAccessButton"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="@dimen/small_margin"
            android:backgroundTint="@color/buttonPrimary"
            android:text="@string/allow_access"
            android:textColor="@color/textColorOnPrimary" />

        <!-- Decline Button -->
        <Button
            android:id="@+id/declineButton"
            style="@style/ButtonSecondary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:backgroundTint="@color/buttonTextColor"
            android:text="@string/decline"
            android:textColor="@color/textColorOnSecondary" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>




    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent"-->

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:orientation="vertical"-->
    <!--        android:padding="24dp"-->
    <!--        android:gravity="center"-->
    <!--        android:background="@color/backgroundColor">-->

    <!--        <TextView-->
    <!--            android:id="@+id/geolocationWarningTitle"-->
    <!--            style="@style/WarningTitle"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:text="@string/geolocation_warning_title" />-->

    <!--        <TextView-->
    <!--            android:id="@+id/geolocationWarningMessage"-->
    <!--            style="@style/WarningMessage"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:text="@string/geolocation_warning_message" />-->

    <!--        <Button-->
    <!--            android:id="@+id/allowAccessButton"-->
    <!--            style="@style/ButtonPrimary"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:text="@string/allow_access" />-->

    <!--        <Button-->
    <!--            android:id="@+id/declineButton"-->
    <!--            style="@style/ButtonSecondary"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:text="@string/decline" />-->
    <!--    </LinearLayout>-->

    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->