<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".view.EventDetailsActivity">

    <!-- Include Top Navbar -->
    <include
        android:id="@+id/top_navbar"
        layout="@layout/top_navbar_with_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Heading: Event Details -->
    <TextView
        android:id="@+id/event_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="Event Details"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/textColorPrimary"
        style="@style/TextHeading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Event Image with Rounded Corners -->
    <androidx.cardview.widget.CardView
        android:id="@+id/eventImageCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/top_navbar">

        <ImageView
            android:id="@+id/eventImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/event_image_height"
            android:background="@drawable/sample_event_image_background"
            android:scaleType="centerCrop"
            android:src="@drawable/sample_event_image" />

    </androidx.cardview.widget.CardView>

    <!-- Event Title -->
    <TextView
        android:id="@+id/eventTitle"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/sample_event_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventImageCard" />

    <TextView
        android:id="@+id/hosterTitle"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="Organized by: Regan Dexter"
        android:textColor="@color/textColorSecondary"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventTitle" />

    <!-- Event Date -->
    <LinearLayout
        android:id="@+id/eventDateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hosterTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/startTime"
                style="@style/TextBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:text="Start Time: "
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/eventTitle" />


            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />


            <TextView
                android:id="@+id/eventDateStart"
                style="@style/TextBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/medium_margin"
                android:text="2024/12/06 "
                android:textSize="@dimen/text_size_large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/eventTitle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/medium_margin">

            <TextView
                android:id="@+id/endTime"
                style="@style/TextBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:text="End Time: "
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent" />


            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/eventDateEnd"
                style="@style/TextBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/medium_margin"
                android:text="2024/12/06 "
                android:textSize="@dimen/text_size_large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/eventTitle" />
        </LinearLayout>

    </LinearLayout>

    <!-- Event Location -->
    <LinearLayout
        android:id="@+id/eventLocationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventDateLayout" >

        <TextView
            android:id="@+id/eventLocation"
            style="@style/TextBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/sample_event_location"
            android:textSize="@dimen/text_size_large"
            android:drawablePadding="8dp"
            app:drawableStartCompat="@drawable/location_icon_green"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
    <!-- Event Description -->
    <TextView
        android:id="@+id/eventDescription"
        style="@style/TextBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:ellipsize="end"
        android:text="@string/sample_event_description"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintTop_toBottomOf="@id/eventLocationLayout"
        tools:layout_editor_absoluteX="16dp" />

    <!-- Delete Warning Message -->
    <TextView
        android:id="@+id/warning_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:text="Warning: Deleting this event/event poster will permanently remove it. This action cannot be undone."
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toTopOf="@+id/admin_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/medium_margin" />

    <LinearLayout
        android:id="@+id/admin_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_navbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/medium_margin">

        <!-- Cancel Button -->
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="Cancel"
            android:textColor="@color/buttonPrimary"
            app:cornerRadius="@dimen/button_corner_radius" />

        <!-- Delete Event Button -->
        <Button
            android:id="@+id/delete_event_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttonPrimary"
            android:text="Delete Event"
            android:textColor="@color/textColorOnPrimary"
            app:cornerRadius="@dimen/button_corner_radius" />

        <!-- Delete Event Poster Button -->
        <Button
            android:id="@+id/delete_event_poster_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/buttonPrimary"
            android:text="Delete Poster"
            android:textColor="@color/textColorOnPrimary"
            app:cornerRadius="@dimen/button_corner_radius"
            android:visibility="gone"/>
    </LinearLayout>

    <!-- Bottom Navigation Bar -->
    <include
        android:id="@+id/bottom_navbar"
        layout="@layout/bottom_navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
